# windows-app-rs

./: .gitignore  .rustfmt.toml  Cargo-generate.toml  Cargo.toml  build.rs
.github/: README.md  SUPPORT.md  readme.md  readme2.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
.metadata/: dummy.lib  generate.proj  global.json  microsoft.directwrite.cpp  microsoft.directwritecore.cpp  microsoft.mrm.cpp  microsoft.ui.xaml.cpp  microsoft.ui.xaml.hosting.cpp  microsoft.ui.xaml.media.cpp  microsoft.was.foundation.cpp  options.rsp  readme.md
.metadata/manifests/: Microsoft.InteractiveExperiences.manifest  Microsoft.WindowsAppSdk.Foundation.manifest  Microsoft.WindowsAppSdk.WinUI.manifest
.windows/arm64/: Microsoft.ProjectReunion.Bootstrap.lib  Microsoft.WindowsAppSDK.Bootstrap.lib
.windows/lib/aarch64/: MRM.lib  Microsoft.ProjectReunion.lib
.windows/lib/i686/: MRM.lib  Microsoft.ProjectReunion.Bootstrap.lib  Microsoft.ProjectReunion.lib
.windows/lib/x86_64/: MRM.lib  Microsoft.ProjectReunion.Bootstrap.lib  Microsoft.ProjectReunion.lib
.windows/winmd/: Microsoft.Foundation.winmd  Microsoft.Graphics.DirectX.winmd  Microsoft.Graphics.winmd  Microsoft.UI.Dispatching.winmd  Microsoft.UI.Hosting.winmd  Microsoft.UI.Text.winmd  Microsoft.UI.Xaml.winmd  Microsoft.UI.winmd  Microsoft.Web.WebView2.Core.winmd  Microsoft.Windows.AppLifecycle.winmd  Microsoft.Windows.AppNotifications.winmd  Microsoft.Windows.ApplicationModel.DynamicDependency.winmd  Microsoft.Windows.ApplicationModel.Resources.winmd  Microsoft.Windows.ApplicationModel.WindowsAppRuntime.winmd  Microsoft.Windows.PushNotifications.winmd  Microsoft.Windows.System.Power.winmd  Microsoft.Windows.System.winmd  Microsoft.WindowsAppSdk.Generated.winmd  Microsoft.WindowsAppSdk.Interop.winmd
.windows/x64/: Microsoft.WindowsAppRuntime.Bootstrap.lib
bindings/: Cargo.toml  build.rs  cargo.toml
bindings/.windows/winmd/: Microsoft.ApplicationModel.Resources.winmd  Microsoft.Foundation.winmd  Microsoft.Graphics.winmd  Microsoft.UI.Composition.winmd  Microsoft.UI.Input.winmd  Microsoft.UI.Windowing.winmd  Microsoft.UI.winmd  Microsoft.Web.WebView2.Core.winmd  Microsoft.Windows.AppLifecycle.winmd  Microsoft.WindowsAppSdk.Interop.winmd
bindings/.windows/x64/: Microsoft.WindowsAppSDK.Bootstrap.lib
bindings/.windows/x86/: Microsoft.WindowsAppSDK.Bootstrap.lib
crates/libs/windows-app/: Cargo.toml
crates/libs/windows-app-deploy/: Cargo.toml
crates/libs/windows-app-deploy/src/: generated.rs  lib.rs
crates/libs/windows-app/src/: lib.rs
crates/libs/windows-app/src/Microsoft/: mod.rs
crates/libs/windows-app/src/bootstrap/: mod.rs
crates/samples/appwindow/: Cargo.toml  build.rs
crates/samples/appwindow/src/: main.rs
crates/samples/battery/: Cargo.toml  build.rs
crates/samples/battery/src/: main.rs
crates/samples/battery_xcopy/: Cargo.toml  stage.ps1
crates/samples/battery_xcopy/src/: main.rs
crates/samples/colors/: Cargo.toml
crates/samples/colors/src/: main.rs
crates/samples/dwritecore/: Cargo.toml  build.rs
crates/samples/dwritecore/src/: main.rs
crates/samples/mrm/: Cargo.toml  build.rs  build_pri.cmd  priconfig.xml
crates/samples/mrm/resources/: resources.resfiles
crates/samples/mrm/resources/strings/en/: strings.resjson
crates/samples/mrm/resources/strings/es/: strings.resjson
crates/samples/mrm/src/: main.rs
crates/samples/xamlapp/: Cargo.toml  build.rs
crates/samples/xamlapp/src/: main.rs
crates/targets/aarch64_msvc/: Cargo.toml  build.rs
crates/targets/aarch64_msvc/lib/: DWriteCore.lib  Microsoft.WindowsAppRuntime.Bootstrap.lib
crates/targets/i686_gnu/: Cargo.toml
crates/targets/i686_msvc/: Cargo.toml
crates/targets/i686_msvc/lib/: DWriteCore.lib  Microsoft.WindowsAppRuntime.Bootstrap.lib
crates/targets/x86_64_gnu/: Cargo.toml  build.rs
crates/targets/x86_64_msvc/: Cargo.toml
crates/targets/x86_64_msvc/lib/: DWriteCore.lib  Microsoft.WindowsAppRuntime.Bootstrap.lib
crates/tools/api/: Cargo.toml
crates/tools/api/src/: main.rs
crates/tools/gnu/: Cargo.toml  readme.md
crates/tools/gnu/src/: main.rs
examples/: readme.md
src/: bootstrap.rs  lib.rs  main.rs
src/Microsoft/: mod.rs
src/Microsoft/DirectWrite/: impl.rs  mod.rs
src/Microsoft/DirectWriteCore/: impl.rs  mod.rs
src/Microsoft/Foundation/: mod.rs
src/Microsoft/Graphics/: mod.rs
src/Microsoft/Graphics/DirectX/: mod.rs
src/Microsoft/MRM/: mod.rs
src/Microsoft/UI/: mod.rs
src/Microsoft/UI/Composition/: impl.rs  mod.rs
src/Microsoft/UI/Composition/Core/: mod.rs
src/Microsoft/UI/Composition/Diagnostics/: mod.rs
src/Microsoft/UI/Composition/Effects/: mod.rs
src/Microsoft/UI/Composition/Experimental/: impl.rs  mod.rs
src/Microsoft/UI/Composition/Interactions/: impl.rs  mod.rs
src/Microsoft/UI/Composition/Scenes/: mod.rs
src/Microsoft/UI/Composition/SystemBackdrops/: impl.rs  mod.rs
src/Microsoft/UI/Content/: impl.rs  mod.rs
src/Microsoft/UI/Dispatching/: mod.rs
src/Microsoft/UI/Input/: impl.rs  mod.rs
src/Microsoft/UI/Input/Experimental/: mod.rs
src/Microsoft/UI/Input/Interop/: mod.rs
src/Microsoft/UI/Text/: impl.rs  mod.rs
src/Microsoft/UI/Windowing/: mod.rs
src/Microsoft/UI/Xaml/: impl.rs  mod.rs
src/Microsoft/UI/Xaml/Automation/: mod.rs
src/Microsoft/UI/Xaml/Controls/: impl.rs
src/Microsoft/UI/Xaml/Core/: mod.rs
src/Microsoft/UI/Xaml/Data/: impl.rs  mod.rs
src/Microsoft/UI/Xaml/Documents/: impl.rs  mod.rs
src/Microsoft/Web/: mod.rs
src/Microsoft/Web/WebView2/: mod.rs
src/Microsoft/Windows/: mod.rs
src/Microsoft/Windows/AppLifecycle/: mod.rs
src/Microsoft/Windows/AppNotifications/: mod.rs
src/Microsoft/Windows/ApplicationModel/: mod.rs
src/Microsoft/Windows/PushNotifications/: mod.rs
src/Microsoft/Windows/System/: mod.rs
src/Microsoft/WindowsAppSdk/: mod.rs
src/Microsoft/WindowsAppSdk/Foundation/: mod.rs
src/bootstrap/: mod.rs  tests.rs  workarounds.rs
src/bootstrap/deploy/: generated.rs  mod.rs
src/core/: mod.rs
src/core/interop/: mod.rs
src/core/interop/windowing/: mod.rs
(+99 files in other folders)
