[package]
name = "windows-app"
version = "0.3.0"
authors = [""]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust for Windows App SDK"
repository = "https://github.com/microsoft/windows-app-rs"
documentation = ""
readme = ".github/readme.md"
exclude = [".github", ".windows", "docs", "tests"]

[workspace]
members = [
    "crates/tools/*",
    "crates/targets/*"
]

[target.i686-pc-windows-msvc.dependencies]
windows_app_i686_msvc = { path = "crates/targets/i686_msvc", version = "0.3.0" }

[target.x86_64-pc-windows-msvc.dependencies]
windows_app_x86_64_msvc = { path = "crates/targets/x86_64_msvc", version = "0.3.0" }

[target.aarch64-pc-windows-msvc.dependencies]
windows_app_aarch64_msvc = { path = "crates/targets/aarch64_msvc", version = "0.3.0" }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies.windows]
version = "0.33.0"
features = [
    "alloc",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_Storage_Packaging_Appx"
]

[features]
default = []
deprecated = []
Foundation = [
]
Graphics = [
]
Graphics_DirectX = [
  "Graphics",
]
MRM = [
]
UI = [
]
UI_Composition = [
  "UI",
  "windows/Foundation_Collections",
]
UI_Composition_Core = [
  "UI_Composition",
]
UI_Composition_Diagnostics = [
  "UI_Composition",
]
UI_Composition_Effects = [
  "UI_Composition",
]
UI_Composition_Interactions = [
  "UI_Composition",
]
UI_Composition_Scenes = [
  "UI_Composition",
  "windows/Foundation_Collections",
]
UI_Composition_SystemBackdrops = [
  "UI_Composition",
]
UI_Dispatching = [
  "UI",
]
UI_Input = [
  "UI",
  "windows/Foundation",
]
UI_Input_Interop = [
  "UI_Input",
]
UI_Text = [
  "UI",
]
UI_Windowing = [
  "UI",
]
UI_Xaml = [
  "UI",
  "windows/Foundation_Collections",
  "windows/Foundation",
  "windows/ApplicationModel",
]
UI_Xaml_Automation = [
  "UI_Xaml",
]
UI_Xaml_Automation_Peers = [
  "UI_Xaml_Automation",
]
UI_Xaml_Automation_Provider = [
  "UI_Xaml_Automation",
]
UI_Xaml_Automation_Text = [
  "UI_Xaml_Automation",
]
UI_Xaml_Controls = [
  "UI_Xaml",
  "windows/Foundation_Collections",
  "windows/Foundation",
]
UI_Xaml_Controls_AnimatedVisuals = [
  "UI_Xaml_Controls",
]
UI_Xaml_Controls_Primitives = [
  "UI_Xaml_Controls",
]
UI_Xaml_Core = [
  "UI_Xaml",
]
UI_Xaml_Core_Direct = [
  "UI_Xaml_Core",
]
UI_Xaml_Data = [
  "UI_Xaml",
]
UI_Xaml_Documents = [
  "UI_Xaml",
  "windows/Foundation_Collections",
]
UI_Xaml_Hosting = [
  "UI_Xaml",
]
UI_Xaml_Input = [
  "UI_Xaml",
]
UI_Xaml_Interop = [
  "UI_Xaml",
]
UI_Xaml_Markup = [
  "UI_Xaml",
]
UI_Xaml_Media = [
  "UI_Xaml",
  "windows/Foundation_Collections",
]
UI_Xaml_Media_Animation = [
  "UI_Xaml_Media",
  "windows/Foundation",
  "windows/Foundation_Collections",
]
UI_Xaml_Media_Imaging = [
  "UI_Xaml_Media",
]
UI_Xaml_Media_Media3D = [
  "UI_Xaml_Media",
]
UI_Xaml_Navigation = [
  "UI_Xaml",
]
UI_Xaml_Printing = [
  "UI_Xaml",
]
UI_Xaml_Resources = [
  "UI_Xaml",
]
UI_Xaml_Shapes = [
  "UI_Xaml",
]
UI_Xaml_XamlTypeInfo = [
  "UI_Xaml",
]
Web = [
]
Web_WebView2 = [
  "Web",
]
Web_WebView2_Core = [
  "Web_WebView2",
]
Windows = [
]
Windows_AppLifecycle = [
  "Windows",
]
Windows_ApplicationModel = [
  "Windows",
]
Windows_ApplicationModel_DynamicDependency = [
  "Windows_ApplicationModel",
]
Windows_ApplicationModel_Resources = [
  "Windows_ApplicationModel",
]
Windows_ApplicationModel_WindowsAppRuntime = [
  "Windows_ApplicationModel",
]
Windows_System = [
  "Windows",
]
Windows_System_Power = [
  "Windows_System",
]
WindowsAppSdk = [
]
WindowsAppSdk_Foundation = [
  "WindowsAppSdk",
  "windows/Win32_Storage_Packaging_Appx",
]
