[package]
name = "windows-app"
version = "0.4.0"
authors = [""]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust for Windows App SDK"
repository = "https://github.com/microsoft/windows-app-rs"
documentation = ""
readme = ".github/readme.md"
exclude = [".github", ".windows", "docs", "tests"]

[workspace]
members = [
    "crates/tools/*",
    "crates/targets/*",
    "crates/samples/*",
]

[target.i686-pc-windows-msvc.dependencies]
windows_app_i686_msvc = { path = "crates/targets/i686_msvc", version = "0.4.0" }

[target.x86_64-pc-windows-msvc.dependencies]
windows_app_x86_64_msvc = { path = "crates/targets/x86_64_msvc", version = "0.4.0" }

[target.aarch64-pc-windows-msvc.dependencies]
windows_app_aarch64_msvc = { path = "crates/targets/aarch64_msvc", version = "0.4.0" }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_Storage_Packaging_Appx",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
]

[features]
default = []
deprecated = []
implement = ["windows/implement"]
Foundation = []
Graphics = []
Graphics_DirectX = ["Graphics"]
MRM = []
UI = ["windows/UI"]
UI_Composition = ["UI","windows/Graphics","windows/UI","windows/Foundation","windows/Foundation_Numerics","windows/Foundation_Collections","windows/Graphics_Effects"]
UI_Composition_Core = ["UI_Composition","windows/Foundation"]
UI_Composition_Diagnostics = ["UI_Composition"]
UI_Composition_Effects = ["UI_Composition","windows/Graphics_Effects"]
UI_Composition_Interactions = ["UI_Composition","windows/Foundation","windows/Foundation_Numerics","windows/Foundation_Collections"]
UI_Composition_Scenes = ["UI_Composition","windows/Foundation_Numerics","windows/Foundation_Collections","windows/Foundation"]
UI_Composition_SystemBackdrops = ["UI_Composition","windows/UI_Composition","windows/UI_Core","windows/UI"]
UI_Dispatching = ["UI","windows/Foundation"]
UI_Input = ["UI","windows/System","windows/Foundation_Collections","windows/Foundation","windows/UI_Core"]
UI_Input_Interop = ["UI_Input","windows/Devices_Input"]
UI_Text = ["UI","windows/UI","windows/Foundation","windows/Storage_Streams","windows/UI_Text"]
UI_Windowing = ["UI","windows/Foundation","windows/Graphics","windows/UI","windows/Foundation_Collections"]
UI_Xaml = ["UI","windows/Win32_Foundation","windows/Foundation","windows/ApplicationModel_Activation","windows/Foundation_Numerics","windows/ApplicationModel_Core","windows/ApplicationModel_DataTransfer_DragDrop","windows/UI_Core","windows/ApplicationModel","windows/ApplicationModel_DataTransfer","windows/Graphics_Imaging","windows/Foundation_Collections","windows/UI_Xaml_Interop","windows/UI"]
UI_Xaml_Automation = ["UI_Xaml","windows/Foundation_Collections"]
UI_Xaml_Automation_Peers = ["UI_Xaml_Automation","windows/Foundation","windows/Foundation_Collections"]
UI_Xaml_Automation_Provider = ["UI_Xaml_Automation","windows/UI","windows/Foundation"]
UI_Xaml_Automation_Text = ["UI_Xaml_Automation"]
UI_Xaml_Controls = ["UI_Xaml","windows/ApplicationModel_DataTransfer","windows/ApplicationModel_Contacts","windows/Foundation","windows/Foundation_Collections","windows/UI_Xaml_Interop","windows/Globalization","windows/Globalization_NumberFormatting","windows/UI_Text","windows/UI","windows/Foundation_Numerics","windows/Media_Casting"]
UI_Xaml_Controls_AnimatedVisuals = ["UI_Xaml_Controls","windows/UI","windows/Foundation_Collections"]
UI_Xaml_Controls_Primitives = ["UI_Xaml_Controls","windows/UI","windows/Foundation_Numerics","windows/Foundation","windows/UI_Xaml_Interop","windows/Foundation_Collections"]
UI_Xaml_Core = ["UI_Xaml"]
UI_Xaml_Core_Direct = ["UI_Xaml_Core"]
UI_Xaml_Data = ["UI_Xaml","windows/Foundation","windows/UI_Xaml_Interop","windows/Foundation_Collections"]
UI_Xaml_Documents = ["UI_Xaml","windows/Foundation","windows/UI_Text","windows/Foundation_Collections"]
UI_Xaml_Hosting = ["UI_Xaml","windows/Win32_Foundation","windows/Win32_UI_WindowsAndMessaging"]
UI_Xaml_Input = ["UI_Xaml","windows/System","windows/UI_Core","windows/Foundation","windows/Foundation_Collections"]
UI_Xaml_Interop = ["UI_Xaml","windows/Foundation"]
UI_Xaml_Markup = ["UI_Xaml","windows/Foundation_Collections","windows/UI_Xaml_Interop","windows/Foundation","windows/Storage_Streams"]
UI_Xaml_Media = ["UI_Xaml","windows/Foundation_Collections","windows/UI","windows/Foundation","windows/Win32_Graphics_Dxgi","windows/Win32_Foundation","windows/Storage_Streams"]
UI_Xaml_Media_Animation = ["UI_Xaml_Media","windows/Foundation_Collections","windows/UI","windows/Foundation"]
UI_Xaml_Media_Imaging = ["UI_Xaml_Media","windows/Graphics_Imaging","windows/Foundation","windows/Storage_Streams","windows/ApplicationModel_Background"]
UI_Xaml_Media_Media3D = ["UI_Xaml_Media"]
UI_Xaml_Navigation = ["UI_Xaml","windows/UI_Xaml_Interop","windows/Foundation"]
UI_Xaml_Printing = ["UI_Xaml","windows/Graphics_Printing","windows/Foundation"]
UI_Xaml_Resources = ["UI_Xaml"]
UI_Xaml_Shapes = ["UI_Xaml","windows/Foundation_Collections"]
UI_Xaml_XamlTypeInfo = ["UI_Xaml","windows/UI_Xaml_Interop"]
Web = []
Web_WebView2 = ["Web"]
Web_WebView2_Core = ["Web_WebView2","windows/Security_Cryptography_Certificates","windows/Storage_Streams","windows/Foundation","windows/Foundation_Collections","windows/UI_Core","windows/UI"]
Windows = []
Windows_AppLifecycle = ["Windows","windows/Foundation","windows/Foundation_Collections"]
Windows_ApplicationModel = ["Windows"]
Windows_ApplicationModel_DynamicDependency = ["Windows_ApplicationModel","windows/ApplicationModel"]
Windows_ApplicationModel_Resources = ["Windows_ApplicationModel","windows/Foundation_Collections","windows/Foundation"]
Windows_ApplicationModel_WindowsAppRuntime = ["Windows_ApplicationModel"]
Windows_System = ["Windows"]
Windows_System_Power = ["Windows_System","windows/Foundation"]
WindowsAppSdk = []
WindowsAppSdk_Foundation = ["WindowsAppSdk","windows/Win32_Storage_Packaging_Appx"]
