[package]
name = "windows-app"
version = "0.4.0"
authors = [""]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Rust for Windows App SDK"
repository = "https://github.com/microsoft/windows-app-rs"
documentation = ""
readme = ".github/readme.md"
exclude = [".github", ".windows", "docs", "tests"]

[workspace]
members = [
    "crates/tools/*",
    "crates/targets/*",
    "crates/samples/*",
]

[target.i686-pc-windows-msvc.dependencies]
windows_app_i686_msvc = { path = "crates/targets/i686_msvc", version = "0.4.0" }

[target.x86_64-pc-windows-msvc.dependencies]
windows_app_x86_64_msvc = { path = "crates/targets/x86_64_msvc", version = "0.4.0" }

[target.aarch64-pc-windows-msvc.dependencies]
windows_app_aarch64_msvc = { path = "crates/targets/aarch64_msvc", version = "0.4.0" }

[target.i686-pc-windows-gnu.dependencies]
windows_app_i686_gnu = { path = "crates/targets/i686_gnu", version = "0.4.0" }

[target.x86_64-pc-windows-gnu.dependencies]
windows_app_x86_64_gnu = { path = "crates/targets/x86_64_gnu", version = "0.4.0" }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies.windows]
version = "0.37"
features = [
    "alloc",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_Storage_Packaging_Appx",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
]

[features]
default = []
deprecated = []
implement = ["windows/implement"]
DirectWrite = ["windows/Win32_Foundation","windows/Win32_Graphics_DirectWrite","windows/Win32_Graphics_Gdi","windows/Win32_Graphics_Direct2D_Common","windows/Win32_Globalization"]
Foundation = []
Graphics = []
Graphics_DirectX = ["Graphics"]
MRM = []
UI = ["windows/UI"]
UI_Composition = ["UI","windows/Foundation","windows/Graphics_Effects","windows/Foundation_Numerics","windows/Graphics","windows/UI_Composition","windows/UI","windows/Foundation_Collections"]
UI_Composition_Core = ["UI_Composition","windows/Foundation"]
UI_Composition_Diagnostics = ["UI_Composition"]
UI_Composition_Effects = ["UI_Composition","windows/Graphics_Effects"]
UI_Composition_Interactions = ["UI_Composition","windows/Foundation_Numerics","windows/Foundation","windows/Foundation_Collections"]
UI_Composition_Scenes = ["UI_Composition","windows/Foundation_Collections","windows/Foundation_Numerics","windows/Foundation"]
UI_Composition_SystemBackdrops = ["UI_Composition","windows/Foundation","windows/UI_Core","windows/UI_Composition","windows/UI"]
UI_Dispatching = ["UI","windows/Foundation"]
UI_Input = ["UI","windows/Foundation","windows/UI_Core","windows/Foundation_Collections","windows/System"]
UI_Input_Interop = ["UI_Input","windows/Devices_Input"]
UI_Text = ["UI","windows/Foundation","windows/UI","windows/UI_Text","windows/Storage_Streams"]
UI_Windowing = ["UI","windows/Graphics","windows/Foundation","windows/UI","windows/Foundation_Collections"]
UI_Xaml = ["UI","windows/UI_Xaml_Interop","windows/Foundation_Numerics","windows/UI","windows/ApplicationModel","windows/Win32_Foundation","windows/ApplicationModel_DataTransfer_DragDrop","windows/ApplicationModel_Activation","windows/UI_Core","windows/Foundation","windows/Foundation_Collections","windows/ApplicationModel_Core","windows/Graphics_Imaging","windows/ApplicationModel_DataTransfer"]
UI_Xaml_Automation = ["UI_Xaml","windows/Foundation_Collections"]
UI_Xaml_Automation_Peers = ["UI_Xaml_Automation","windows/Foundation_Collections","windows/Foundation"]
UI_Xaml_Automation_Provider = ["UI_Xaml_Automation","windows/UI","windows/Foundation"]
UI_Xaml_Automation_Text = ["UI_Xaml_Automation"]
UI_Xaml_Controls = ["UI_Xaml","windows/ApplicationModel_DataTransfer","windows/Foundation_Numerics","windows/ApplicationModel_Contacts","windows/UI_Xaml_Interop","windows/Globalization","windows/Media_Casting","windows/Globalization_NumberFormatting","windows/Foundation_Collections","windows/UI","windows/Foundation","windows/UI_Text"]
UI_Xaml_Controls_AnimatedVisuals = ["UI_Xaml_Controls","windows/UI","windows/Foundation_Collections"]
UI_Xaml_Controls_Primitives = ["UI_Xaml_Controls","windows/Foundation","windows/UI","windows/Foundation_Numerics","windows/UI_Xaml_Interop","windows/Foundation_Collections"]
UI_Xaml_Core = ["UI_Xaml"]
UI_Xaml_Core_Direct = ["UI_Xaml_Core"]
UI_Xaml_Data = ["UI_Xaml","windows/Foundation_Collections","windows/UI_Xaml_Interop","windows/Foundation"]
UI_Xaml_Documents = ["UI_Xaml","windows/Foundation","windows/UI_Text","windows/Foundation_Collections"]
UI_Xaml_Hosting = ["UI_Xaml","windows/Win32_UI_WindowsAndMessaging","windows/Win32_Foundation"]
UI_Xaml_Input = ["UI_Xaml","windows/Foundation_Collections","windows/UI_Core","windows/System","windows/Foundation"]
UI_Xaml_Interop = ["UI_Xaml","windows/Foundation"]
UI_Xaml_Markup = ["UI_Xaml","windows/Foundation","windows/Foundation_Collections","windows/Storage_Streams","windows/UI_Xaml_Interop"]
UI_Xaml_Media = ["UI_Xaml","windows/UI","windows/Storage_Streams","windows/Foundation_Collections","windows/Foundation","windows/Win32_Graphics_Dxgi","windows/Win32_Foundation"]
UI_Xaml_Media_Animation = ["UI_Xaml_Media","windows/Foundation","windows/Foundation_Collections","windows/UI"]
UI_Xaml_Media_Imaging = ["UI_Xaml_Media","windows/Foundation","windows/Storage_Streams","windows/Graphics_Imaging","windows/ApplicationModel_Background"]
UI_Xaml_Media_Media3D = ["UI_Xaml_Media"]
UI_Xaml_Navigation = ["UI_Xaml","windows/UI_Xaml_Interop","windows/Foundation"]
UI_Xaml_Printing = ["UI_Xaml","windows/Foundation","windows/Graphics_Printing"]
UI_Xaml_Resources = ["UI_Xaml"]
UI_Xaml_Shapes = ["UI_Xaml","windows/Foundation_Collections"]
UI_Xaml_XamlTypeInfo = ["UI_Xaml","windows/UI_Xaml_Interop"]
Web = []
Web_WebView2 = ["Web"]
Web_WebView2_Core = ["Web_WebView2","windows/Foundation","windows/Foundation_Collections","windows/Storage_Streams","windows/UI","windows/Security_Cryptography_Certificates","windows/UI_Core"]
Windows = []
Windows_AppLifecycle = ["Windows","windows/Foundation_Collections","windows/ApplicationModel_Core","windows/Foundation"]
Windows_AppNotifications = ["Windows","windows/Foundation_Collections","windows/Foundation"]
Windows_ApplicationModel = ["Windows"]
Windows_ApplicationModel_DynamicDependency = ["Windows_ApplicationModel","windows/ApplicationModel"]
Windows_ApplicationModel_Resources = ["Windows_ApplicationModel","windows/Foundation","windows/Foundation_Collections"]
Windows_ApplicationModel_WindowsAppRuntime = ["Windows_ApplicationModel"]
Windows_PushNotifications = ["Windows","windows/ApplicationModel_Background","windows/Foundation"]
Windows_System = ["Windows","windows/Foundation_Collections"]
Windows_System_Power = ["Windows_System","windows/Foundation"]
WindowsAppSdk = []
WindowsAppSdk_Foundation = ["WindowsAppSdk","windows/Win32_Storage_Packaging_Appx"]
