[package]
name = "samples_appwindow"
version = "0.0.0"
publish = false
edition = "2018"

[build-dependencies.windows-app]
path = "../../../"
features = [
    "WindowsAppSdk_Foundation"
]

[dependencies.windows]
version = "0.35.0"
features = [ "Win32_UI_HiDpi" ]

[dependencies.windows-app]
path = "../../../"
features = [
    "WindowsAppSdk_Foundation",
    "UI_Windowing",
]
