[package]
name = "samples_appwindow"
version = "0.0.0"
publish = false
edition = "2018"

[build-dependencies.windows-app-deploy]
path = "../../libs/windows-app-deploy"

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "Win32_Foundation",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
]

[dependencies.windows-app]
path = "../../libs/windows-app"
features = [
    "bootstrap",
    "WindowsAppSdk_Foundation",
    "UI_Windowing",
]
