[package]
name = "samples_battery_xcopy"
version = "0.0.0"
publish = false
edition = "2018"

[build-dependencies.windows-app-deploy]
path = "../../libs/windows-app-deploy"

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
]

[dependencies.windows-app]
path = "../../libs/windows-app"
features = [
    "bootstrap",
    "WindowsAppSdk_Foundation",
    "Windows_System_Power"
]
