[package]
name = "sample_colors"
version = "0.0.0"
publish = false
edition = "2018"

[build-dependencies.windows-app]
path = "../../../"
features = [
    "WindowsAppSdk_Foundation",
]

[dependencies.windows]
version = "0.37"

[dependencies.windows-app]
path = "../../../"
features = [
    "UI_Xaml"
]
