[package]
name = "samples_mrm"
version = "0.0.0"
publish = false
edition = "2018"

[build-dependencies.windows-app]
path = "../../../"
features = [
    "WindowsAppSdk_Foundation",
]

[dependencies.windows]
git = "https://github.com/microsoft/windows-rs"

[dependencies.windows-app]
path = "../../../"
features = [
    "WindowsAppSdk_Foundation",
    "Windows_ApplicationModel_Resources",
]
